--- a/assets/pages/aboutMe.html
+++ b/assets/pages/aboutMe.html
@@ -17,7 +17,7 @@
     <!-- bootstrap v5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/secondary.css" />
+    <link rel="stylesheet" href="../css/main.css" />
     <title>Road To Dev || Who am I and what I do</title>
 </head>
 
@@ -67,8 +67,9 @@
                         I always seek to colaborate in projects that takes me out of my comfort zone leveling up my
                         skills while giving my 100%</p>
                 </div>
-                <div class="col-sm-8 col-md-6">
-                    <img src="../images/pp.jpeg" alt="image of a very good looking man" class="img-fluid about-image">
+                <div class="col-sm-8 col-md-6 img__container">
+                    <img src="../images/pp.jpeg" alt="image of a very good looking man"
+                        class="img-fluid about-image d-none d-lg-block">
                 </div>
             </div>
         </div>
