--- a/assets/pages/contactMe.html
+++ b/assets/pages/contactMe.html
@@ -17,7 +17,7 @@
     <!-- bootstrap v5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/secondary.css" />
+    <link rel="stylesheet" href="../css/main.css" />
     <title>Road To Dev || Let's get in touch</title>
 </head>
 
@@ -61,30 +61,36 @@
         <div class="container">
             <div class="row">
                 <div class="col">
+                    <h2 class="contact__title py-5">Let's get in touch</h2>
                     <form>
-                        <div class="mb-3 mt-5">
-                            <label for="exampleInputEmail1" class="form-label">First Name</label>
-                            <input type="text" class="form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp">
-                            <div id="emailHelp" class="form-text">First Name</div>
+                        <!-- Name input -->
+                        <div class="form-outline mb-4">
+                            <input type="text" id="form4Example1" class="form-control" />
+                            <label class="form-label" for="form4Example1">Name:</label>
                         </div>
-                        <div class="mb-3 mt-5">
-                            <label for="exampleInputEmail1" class="form-label">Last Name</label>
-                            <input type="text" class="form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp">
-                            <div id="emailHelp" class="form-text">Last Name</div>
+
+                        <!-- Email input -->
+                        <div class="form-outline mb-4">
+                            <input type="email" id="form4Example2" class="form-control" />
+                            <label class="form-label" for="form4Example2">Email address:</label>
                         </div>
-                        <div class="mb-3 mt-5">
-                            <label for="exampleInputEmail1" class="form-label">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp">
-                            <div id="emailHelp" class="form-text">Leave your contact email</div>
+
+                        <!-- Message input -->
+                        <div class="form-outline mb-4">
+                            <textarea class="form-control" id="form4Example3" rows="4"></textarea>
+                            <label class="form-label" for="form4Example3">Message:</label>
                         </div>
-                        <div class="mb-3 form-check mt-5">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="exampleCheck1">I agree with the terms</label>
+
+                        <!-- Checkbox -->
+                        <div class="form-check d-flex justify-content-center mb-4">
+                            <input class="form-check-input me-2" type="checkbox" value="" id="form4Example4" checked />
+                            <label class="form-check-label" for="form4Example4">
+                                I agree with the terms and services
+                            </label>
                         </div>
-                        <button type="submit" class="btn btn-secondary mt-4">Submit</button>
+
+                        <!-- Submit button -->
+                        <button type="submit" class="btn btn-dark mb-4">Send</button>
                     </form>
                 </div>
             </div>
