--- a/assets/pages/portfolio.html
+++ b/assets/pages/portfolio.html
@@ -17,7 +17,7 @@
     <!-- bootstrap v5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/secondary.css" />
+    <link rel="stylesheet" href="../css/main.css" />
     <title>Road To Dev || Portfolio</title>
 </head>
 
@@ -26,12 +26,15 @@
         <!-- nav start -->
         <nav class="navbar navbar-expand-lg navbar-dark nav">
             <div class="container-fluid">
+                <!-- nav logo -->
                 <a class="navbar-brand" href="../../index.html"> <img src="../images/mainLogo.png" alt="brand logo"
                         class="nav__logo"></a>
+                <!-- nav dropMenu -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                <!-- nav links -->
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
@@ -59,16 +62,18 @@
         <!-- portfolio start -->
         <div class="container portfolio__container px-5">
             <div class="row">
+                <!-- project container -->
                 <div class="col-12 col-md-4 py-5">
                     <div class="card">
                         <img src="../images/project.jpg" class="card-img-top" alt="project image">
                         <div class="card-body">
                             <h5 class="card-title">React JS</h5>
-                            <p class="card-text">Project created with React Js for a Start Up</p>
+                            <p class="card-text">Project created with React Js and sass for a Start Up</p>
                             <a href="#" class="btn btn-secondary">Github</a>
                         </div>
                     </div>
                 </div>
+                <!-- project container -->
                 <div class="col-12 col-md-4 py-5">
                     <div class="card">
                         <img src="../images/project.jpg" class="card-img-top" alt="project image">
@@ -79,6 +84,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- project container -->
                 <div class="col-12 col-md-4 py-5">
                     <div class="card">
                         <img src="../images/project.jpg" class="card-img-top" alt="project image">
@@ -90,6 +96,7 @@
                     </div>
                 </div>
                 <div class="row">
+                    <!-- project container -->
                     <div class="col-12 col-md-4 py-5">
                         <div class="card">
                             <img src="../images/project.jpg" class="card-img-top" alt="project image">
@@ -100,6 +107,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- project container -->
                     <div class="col-12 col-md-4 py-5">
                         <div class="card">
                             <img src="../images/project.jpg" class="card-img-top" alt="project image">
@@ -110,6 +118,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- project container -->
                     <div class="col-12 col-md-4 py-5">
                         <div class="card">
                             <img src="../images/project.jpg" class="card-img-top" alt="project image">
