--- a/assets/pages/youtube.html
+++ b/assets/pages/youtube.html
@@ -17,7 +17,7 @@
     <!-- bootstrap v5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/secondary.css" />
+    <link rel="stylesheet" href="../css/main.css" />
     <title>Road To Dev || Youtube channel</title>
 </head>
 
@@ -62,8 +62,8 @@
             <h1 class="youtube__title">My latest video</h1>
             <p class="youtube__text">Go checkout my content, I love creating stuff for the web and sharing with people
                 through my <strong>Youtube</strong> account.</p>
-            <iframe class="youtube__frame" src="https://www.youtube.com/embed/aohimZWy-gg" title="YouTube video player"
-                frameborder="0"
+            <iframe class="youtube__frame d-none d-md-flex" src="https://www.youtube.com/embed/aohimZWy-gg"
+                title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
             <a class="btn btn-secondary mt-5" href="https://www.youtube.com/channel/UC7vy0CAiR7Sh6h4OS7pA7JA/featured"
