--- a/assets/pages/portfolio.html
+++ b/assets/pages/portfolio.html
@@ -19,6 +19,8 @@
     <!-- bootstrap v5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- aos -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- css and preload -->
     <link rel="preload" href="../css/main.css" as="style">
     <link rel="stylesheet" href="../css/main.css" />
@@ -68,7 +70,7 @@
             <div class="row">
                 <!-- project container -->
                 <div class="col-12 col-md-4 py-5">
-                    <div class="card">
+                    <div data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" class="card">
                         <img src="../images/project.jpg" class="card-img-top" alt="project image">
                         <div class="card-body">
                             <h5 class="card-title">React JS</h5>
@@ -79,7 +81,7 @@
                 </div>
                 <!-- project container -->
                 <div class="col-12 col-md-4 py-5">
-                    <div class="card">
+                    <div data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom" class="card">
                         <img src="../images/project.jpg" class="card-img-top" alt="project image">
                         <div class="card-body">
                             <h5 class="card-title">Bootstrap V5</h5>
@@ -90,7 +92,7 @@
                 </div>
                 <!-- project container -->
                 <div class="col-12 col-md-4 py-5">
-                    <div class="card">
+                    <div data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom" class="card">
                         <img src="../images/project.jpg" class="card-img-top" alt="project image">
                         <div class="card-body">
                             <h5 class="card-title">Wordpress</h5>
@@ -102,7 +104,7 @@
                 <div class="row">
                     <!-- project container -->
                     <div class="col-12 col-md-4 py-5">
-                        <div class="card">
+                        <div data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom" class="card">
                             <img src="../images/project.jpg" class="card-img-top" alt="project image">
                             <div class="card-body">
                                 <h5 class="card-title">Tailwind</h5>
@@ -113,7 +115,7 @@
                     </div>
                     <!-- project container -->
                     <div class="col-12 col-md-4 py-5">
-                        <div class="card">
+                        <div data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom" class="card">
                             <img src="../images/project.jpg" class="card-img-top" alt="project image">
                             <div class="card-body">
                                 <h5 class="card-title">Material UI</h5>
@@ -124,7 +126,7 @@
                     </div>
                     <!-- project container -->
                     <div class="col-12 col-md-4 py-5">
-                        <div class="card">
+                        <div data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom" class="card">
                             <img src="../images/project.jpg" class="card-img-top" alt="project image">
                             <div class="card-body">
                                 <h5 class="card-title">Graph QL</h5>
@@ -153,6 +155,11 @@
     <!-- bootstrap v5 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+    <!-- aos scripts -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
     </script>
 </body>
 
