--- a/assets/pages/youtube.html
+++ b/assets/pages/youtube.html
@@ -19,6 +19,8 @@
     <!-- bootstrap v5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- aos -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- css and preload -->
     <link rel="preload" href="../css/main.css" as="style">
     <link rel="stylesheet" href="../css/main.css" />
@@ -79,7 +81,7 @@
     <div class="container video-cards">
         <div class="row">
             <div class="col-md-6 p-4">
-                <div class="card">
+                <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" class="card">
                     <div class="card-image">
                         <div class="embed-responsive embed-responsive-16by9">
                             <iframe class="yt-frame" src="https://www.youtube.com/embed/aohimZWy-gg"
@@ -94,7 +96,7 @@
                 </div>
             </div>
             <div class="col-md-6 p-4">
-                <div class="card">
+                <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" class="card">
                     <div class="card-image">
                         <div class="embed-responsive embed-responsive-16by9">
                             <iframe class="yt-frame" src="https://www.youtube.com/embed/aohimZWy-gg"
@@ -111,7 +113,7 @@
         </div>
         <div class="row">
             <div class="col-md-6 p-4">
-                <div class="card">
+                <div data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" class="card">
                     <div class="card-image">
                         <div class="embed-responsive embed-responsive-16by9">
                             <iframe class="yt-frame" src="https://www.youtube.com/embed/aohimZWy-gg"
@@ -126,7 +128,7 @@
                 </div>
             </div>
             <div class="col-md-6 p-4">
-                <div class="card">
+                <div data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" class="card">
                     <div class="card-image">
                         <div class="embed-responsive embed-responsive-16by9">
                             <iframe class="yt-frame" src="https://www.youtube.com/embed/aohimZWy-gg"
@@ -158,6 +160,11 @@
     <!-- bootstrap v5 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+    <!-- aos scripts -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
     </script>
 </body>
 
