--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <!-- bootstrap v5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- aos -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- css and preload -->
     <link rel="preload" href="../css/main.css" as="style">
     <link rel="stylesheet" href="./assets/css/main.css" />
@@ -74,7 +76,7 @@
         <!-- hero ends -->
     </main>
     <!-- aside start -->
-    <aside class="index">
+    <aside data-aos="fade-left" class="index">
         <section class="socials">
             <a href="https://www.linkedin.com/in/delhierroantonio/" target="_blank"> <img
                     src="./assets/icons/logotipo-de-linkedin.png" alt="linkedin icon" class="social__icon"></a>
@@ -100,6 +102,11 @@
     <!-- bootstrap v5 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+    <!-- aos scripts -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
     </script>
 </body>
 
